[gd_scene format=3 uid="uid://cicd5yg57nyuh"]

[ext_resource type="Script" uid="uid://cmlx36a6r8b2j" path="res://Menus/game_ended_menu.gd" id="1_wvg1o"]

[node name="GameOverMenu" type="Control" unique_id=233575831 node_paths=PackedStringArray("_game_over_label", "_retry_button")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wvg1o")
_game_over_label = NodePath("VBoxContainer/GameOverMessage")
_retry_button = NodePath("VBoxContainer/HBoxContainer/RetryButton")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1906525608]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -61.0
offset_right = 189.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverMessage" type="Label" parent="VBoxContainer" unique_id=1789818643]
layout_mode = 2
text = "YOU LOSE"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=95787364]
layout_mode = 2

[node name="RetryButton" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=57261278]
layout_mode = 2
text = "RETRY"

[node name="MainMenuButton" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=212531865]
layout_mode = 2
size_flags_horizontal = 6
text = "MAIN MENU"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
